# event-correlation

./: .gitignore  README.md  pyproject.toml  requirements.txt
correlation_engine/: __init__.py  cli.py  engine.py
correlation_engine/models/: __init__.py  alert.py  event.py
correlation_engine/processors/: __init__.py  event_buffer.py  false_positive_reducer.py
correlation_engine/rules/: __init__.py  evaluator.py  registry.py  rule.py
correlation_engine/utils/: __init__.py  parsers.py  sample_data.py
examples/: basic_usage.py  custom_rules.py  false_positive_reduction.py
sample_data/: rules.yaml  sample_events.jsonl
tests/: __init__.py  conftest.py  test_engine.py  test_models.py  test_parsers.py  test_rules.py
